Prevent overflowing on mobile.

--- a/cookbook_app/static/css/notice_card.css
+++ b/cookbook_app/static/css/notice_card.css
@@ -5,7 +5,6 @@
 
 .content-card {
     margin-top: 30px;
-    margin-left: 50px;
 }
 
 .notice-card {
